--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/TableDetailDH.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/TableDetailDH.form
@@ -143,9 +143,9 @@
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="btnThem" min="-2" pref="66" max="-2" attributes="0"/>
+                              <Component id="btnInHoaDon" min="-2" pref="66" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
-                              <Component id="btnThem1" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnSave" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="lbGia1" min="-2" max="-2" attributes="0"/>
@@ -207,8 +207,8 @@
                       </Group>
                       <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="btnThem" alignment="1" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnThem1" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnInHoaDon" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnSave" alignment="1" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="15" max="32767" attributes="0"/>
                   </Group>
@@ -284,7 +284,7 @@
                 <Property name="text" type="java.lang.String" value="jLabel15"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JButton" name="btnThem">
+            <Component class="javax.swing.JButton" name="btnInHoaDon">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/Smartphone_sales_management/UI/Icon/print.png"/>
@@ -294,7 +294,7 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnThemActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInHoaDonActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="lbTrangThai">
@@ -310,7 +310,7 @@
                 <Property name="text" type="java.lang.String" value="jLabel10"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JButton" name="btnThem1">
+            <Component class="javax.swing.JButton" name="btnSave">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/Smartphone_sales_management/UI/Icon/confirm.png"/>
@@ -320,7 +320,7 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnThem1ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSaveActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JComboBox" name="jComboBox1">
