--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/MainContentDonHang.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/MainContentDonHang.form
@@ -57,9 +57,9 @@
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
-                          <Component id="jLabel8" pref="155" max="32767" attributes="0"/>
+                          <Component id="jLabel8" pref="182" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                          <Component id="jTextField3" pref="583" max="32767" attributes="0"/>
+                          <Component id="txtTimkiem" pref="610" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                           <Component id="jComboBox2" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
@@ -77,7 +77,7 @@
                       <Group type="102" attributes="0">
                           <EmptySpace min="4" pref="4" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jTextField3" alignment="0" min="-2" pref="28" max="-2" attributes="0"/>
+                              <Component id="txtTimkiem" alignment="0" min="-2" pref="28" max="-2" attributes="0"/>
                               <Component id="jComboBox2" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -107,7 +107,7 @@
             <Property name="text" type="java.lang.String" value="T&#xec;m ki&#x1ebf;m"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField3">
+        <Component class="javax.swing.JTextField" name="txtTimkiem">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Arial" size="16" style="0"/>
@@ -118,7 +118,8 @@
             <Property name="text" type="java.lang.String" value="Nh&#x1ead;p th&#xf4;ng tin t&#xec;m ki&#x1ebf;m"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField3ActionPerformed"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="txtTimkiemMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtTimkiemActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="jComboBox2">
@@ -134,14 +135,15 @@
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
-                <StringItem index="0" value="&#x110;&#x1a1;n h&#xe0;ng &#x111;&#xe3; x&#x1eed; l&#xed;"/>
-                <StringItem index="1" value="&#x110;&#x1a1;n h&#xe0;ng ch&#x1b0;a x&#x1eed; l&#xed;"/>
-                <StringItem index="2" value=" "/>
+                <StringItem index="0" value="ALL"/>
+                <StringItem index="1" value="&#x110;&#xe3; x&#x1eed; l&#xfd;"/>
+                <StringItem index="2" value="Ch&#x1b0;a x&#x1eed; l&#xfd;"/>
                 <StringItem index="3" value=" "/>
               </StringArray>
             </Property>
           </Properties>
           <Events>
+            <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jComboBox2ItemStateChanged"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBox2ActionPerformed"/>
           </Events>
           <AuxValues>
